2006-10-21  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Rework the summary displayed at the end of the
	'configure' script, so that it is more complete, useful, consistent and
	still readable.

2006-10-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.h src/parse.c src/parse.h src/plot2d.c src/plot3d.c:
	Implement a mechanism for iteration within a plot or splot command.
	    {s}plot for [<var>=<start>:<end>{:<incr>}] ...rest of plot clause...

	* docs/gnuplot.doc demo/iterate.dem demo/histograms.dem demo/all.dem: 
	Illustrate use of iteration in plot commands.

2006-10-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open) docs/gnuplot.doc:
	Current syntax for using specs allows
	    plot foo using 1:2 title column
	    plot foo using 1:2 title 2
	but not
	    plot foo using 1:(column(N)) title N
	Fix this by allowing 'title column(N)' in a `using` clause. Note that
	this does not affect the general case 'title "foo"' found outside of a 
	`using` clause.

2006-10-20  Bernhard Simon

	* src/color.c (make_palette): Add missing stderr parameter in 
	FPRINTF debugging statements.

2006-10-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline): If the datafile we are supposedly
	reading from was never opened, simply return DF_EOF. This relieves the
	caller from having to check this separately before calling df_readline.

	* src/datafile.c (df_open); If the datafile cannot be opened, set
	df_eof and return DF_EOF. FIXME: Having both methods is stupid; we
	should just get rid of df_eof and use the return value.

	* src/graph3d.c (do_3dplot draw_3d_graphbox) src/graphics.c (do_plot): 
	* src/plot3d.c (eval_3dplots): 
	Do a better job of skipping over plots marked NODATA.  In particular do
	not try to scan their data for scaling or plot limits, and do not place
	an entry in the key box.

	Bug #1579867

2006-10-17  Ethan Merritt  <merritt@u.washington.edu>
