@@ -109,6 +109,7 @@ scripts are not included on this page.
     <li><a href="key.html">plot key</a></li>
     <li><a href="layout.html">multiplot&nbsp;layout</a></li>
     <li><a href="multiplt.html">multiple plots</a></li>
+    <li><a href="margins.html">aligned plots</a></li>
     <li><a href="tics.html">axis tics</a></li>
     <li><a href="rectangle.html">rectangles</a></li>
     </ul>
