@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.196 2006/10/19 04:00:32 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.197 2006/10/21 22:58:22 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -453,7 +453,14 @@ boundary(struct curve_points *plots, int count)
     /* HBB 20010118: fix round-off bug */
     plot_bounds.ytop = (int) (0.5 + (ysize + yoffset) * t->ymax);
 
-    if (tmargin < 0) {
+    if (tmargin.scalex == screen) {
+	/* Specified as absolute position on the canvas */
+	plot_bounds.ytop -= (1.0 - tmargin.x) * (float)t->ymax + 0.5;
+    } else if (tmargin.x >=0) {
+	/* Specified in terms of character height */
+	plot_bounds.ytop -= tmargin.x * (float)t->v_char + 0.5;
+    } else {
+	/* Auto-calculation of space required */
 	int top_margin = x2label_textheight + title_textheight;
 
 	if (timetop_textheight + ylabel_textheight > top_margin)
@@ -473,21 +480,26 @@ boundary(struct curve_points *plots, int count)
 	    /* make room for the end of rotated ytics or y2tics */
 	    plot_bounds.ytop -= (int) (t->h_char * 2);
 	}
-    } else
-	plot_bounds.ytop -= (int) (t->v_char * tmargin);
+    }
 
     /*  end of preliminary plot_bounds.ytop calculation }}} */
 
 
     /*{{{  tentative plot_bounds.xleft, needed for "under" */
-    plot_bounds.xleft = (int) (xoffset * t->xmax
-		   + t->h_char * (lmargin >= 0 ? lmargin : 2));
+    if (lmargin.scalex == screen)
+	plot_bounds.xleft = (xoffset + lmargin.x) * (float)t->xmax + 0.5;
+    else
+	plot_bounds.xleft = xoffset * t->xmax
+			  + t->h_char * (lmargin.x >= 0 ? lmargin.x : 2);
     /*}}} */
 
 
     /*{{{  tentative plot_bounds.xright, needed for "under" */
-    plot_bounds.xright = (int) ((xsize + xoffset) * t->xmax
-		    - t->h_char * (rmargin >= 0 ? rmargin : 2));
+    if (rmargin.scalex == screen)
+	plot_bounds.xright = (xoffset + rmargin.x) * (float)t->xmax + 0.5;
+    else
+	plot_bounds.xright = (xsize + xoffset) * t->xmax
+			   - t->h_char * (rmargin.x >= 0 ? rmargin.x : 2);
     /*}}} */
 
 
@@ -561,9 +573,15 @@ boundary(struct curve_points *plots, int count)
     /* compute plot_bounds.ybot from the various components
      *     unless bmargin is explicitly specified  */
 
-    plot_bounds.ybot = (int) (0.5 + t->ymax * yoffset);
+    plot_bounds.ybot = yoffset * (float)t->ymax + 0.5;
 
-    if (bmargin < 0) {
+    if (bmargin.scalex == screen) {
+	/* Absolute position for bottom of plot */
+	plot_bounds.ybot += bmargin.x * (float)t->ymax + 0.5;
+    } else if (bmargin.x >= 0) {
+	/* Position based on specified character height */
+	plot_bounds.ybot += bmargin.x * (float)t->v_char + 0.5;
+    } else {
 	plot_bounds.ybot += xtic_height + xtic_textheight;
 	if (xlabel_textheight > 0)
 	    plot_bounds.ybot += xlabel_textheight;
@@ -575,19 +593,10 @@ boundary(struct curve_points *plots, int count)
 	    /* make room for the end of rotated ytics or y2tics */
 	    plot_bounds.ybot += (int) (t->h_char * 2);
 	}
-    } else
-	plot_bounds.ybot += (int) (bmargin * t->v_char);
+    }
 
     /*  end of preliminary plot_bounds.ybot calculation }}} */
 
-    /* compute plot_bounds.xleft from the various components
-     *     unless lmargin is explicitly specified  */
-    plot_bounds.xleft = (int) (0.5 + t->xmax * xoffset);
-
-    /* compute plot_bounds.xright from the various components
-     *     unless rmargin is explicitly specified  */
-
-    plot_bounds.xright = (int) (0.5 + t->xmax * (xsize + xoffset));
 
     if (lkey) {
 	TBOOLEAN key_panic = FALSE;
@@ -694,17 +703,17 @@ boundary(struct curve_points *plots, int count)
 	/* adjust for outside key, leave manually set margins alone */
 	if ((key->region == GPKEY_AUTO_EXTERIOR_LRTBC && (key->vpos != JUST_CENTRE || key->hpos != CENTRE))
 	    || key->region == GPKEY_AUTO_EXTERIOR_MARGIN) {
-	    if (key->margin == GPKEY_BMARGIN && bmargin < 0) {
+	    if (key->margin == GPKEY_BMARGIN && bmargin.x < 0) {
 		plot_bounds.ybot += key_entry_height * key_rows
 		    + (int) (t->v_char * (ktitl_lines + 1));
 		plot_bounds.ybot += (int) (key->height_fix * t->v_char);
-	    } else if (key->margin == GPKEY_TMARGIN && tmargin < 0) {
+	    } else if (key->margin == GPKEY_TMARGIN && tmargin.x < 0) {
 		plot_bounds.ytop -= key_entry_height * key_rows
 		    + (int) (t->v_char * (ktitl_lines + 1));
 		plot_bounds.ytop += (int) (key->height_fix * t->v_char);
-	    } else if (key->margin == GPKEY_LMARGIN && lmargin < 0) {
+	    } else if (key->margin == GPKEY_LMARGIN && lmargin.x < 0) {
 		plot_bounds.xleft += key_col_wth * key_cols;
-	    } else if (key->margin == GPKEY_RMARGIN && rmargin < 0) {
+	    } else if (key->margin == GPKEY_RMARGIN && rmargin.x < 0) {
 		plot_bounds.xright -= key_col_wth * key_cols;
 	    }
   	}
@@ -785,8 +794,9 @@ boundary(struct curve_points *plots, int count)
     } else
 	timelabel_textwidth = 0;
 
-    if (lmargin < 0) {
-       double tmpx, tmpy;
+    if (lmargin.x < 0) {	
+	/* Auto-calculation */
+	double tmpx, tmpy;
 
 	plot_bounds.xleft += (timelabel_textwidth > ylabel_textwidth
 		  ? timelabel_textwidth : ylabel_textwidth)
@@ -805,9 +815,7 @@ boundary(struct curve_points *plots, int count)
 	}
 	/* DBT 12-3-98  extra margin just in case */
 	plot_bounds.xleft += 0.5 * t->v_char;
-    } else
-	plot_bounds.xleft += (int) (lmargin * t->h_char);
-
+    }
     /*  end of plot_bounds.xleft calculation }}} */
 
     /*{{{  recompute plot_bounds.xright based on widest y2tic. y2labels, key "outside"
@@ -857,7 +865,7 @@ boundary(struct curve_points *plots, int count)
 	plot_bounds.xright -= (int) ((t->h_char) * WIDEST_COLORBOX_TICTEXT);
     }
 
-    if (rmargin < 0) {
+    if (rmargin.x < 0) {
 	/* plot_bounds.xright -= y2label_textwidth + y2tic_width + y2tic_textwidth; */
 	plot_bounds.xright -= y2tic_width + y2tic_textwidth;
 	if (y2label_textwidth > 0)
@@ -870,9 +878,7 @@ boundary(struct curve_points *plots, int count)
 	/* DBT 12-3-98  extra margin just in case */
 	plot_bounds.xright -= 0.5 * t->v_char;
 
-    } else
-	plot_bounds.xright -= (int) (rmargin * t->h_char);
-
+    }
     /*  end of plot_bounds.xright calculation }}} */
 
 
@@ -929,7 +935,7 @@ boundary(struct curve_points *plots, int count)
 
     /*  adjust top and bottom margins for tic label rotation */
 
-    if (tmargin < 0
+    if (tmargin.x < 0
 	&& axis_array[SECOND_X_AXIS].ticmode & TICS_ON_BORDER
 	&& vertical_x2tics) {
 	widest_tic_strlen = 0;		/* reset the global variable ... */
@@ -939,7 +945,7 @@ boundary(struct curve_points *plots, int count)
 	x2tic_textheight = (int) (t->h_char * (widest_tic_strlen));
 	plot_bounds.ytop -= x2tic_textheight;
     }
-    if (bmargin < 0
+    if (bmargin.x < 0
 	&& axis_array[FIRST_X_AXIS].ticmode & TICS_ON_BORDER
 	&& vertical_xtics) {
 	widest_tic_strlen = 0;		/* reset the global variable ... */
