@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: save.c,v 1.132 2006/08/22 02:50:54 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: save.c,v 1.133 2006/10/21 22:58:23 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - save.c */
@@ -746,9 +746,15 @@ set origin %g,%g\n",
 #undef SAVE_AXISLABEL_OR_TITLE
 
     fprintf(fp, "set zero %g\n", zero);
-    fprintf(fp, "set lmargin %g\nset bmargin %g\n"
-	    "set rmargin %g\nset tmargin %g\n",
-	    lmargin, bmargin, rmargin, tmargin);
+
+    fprintf(fp, "set lmargin %s %g\n",
+	    lmargin.scalex == screen ? "screen" : "", lmargin.x);
+    fprintf(fp, "set bmargin %s %g\n",
+	    bmargin.scalex == screen ? "screen" : "", bmargin.x);
+    fprintf(fp, "set rmargin %s %g\n",
+	    rmargin.scalex == screen ? "screen" : "", rmargin.x);
+    fprintf(fp, "set tmargin %s %g\n",
+	    tmargin.scalex == screen ? "screen" : "", tmargin.x);
 
     fprintf(fp, "set locale \"%s\"\n", get_locale());
 
